--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "start:main": "node src/index.js",
     "start:task01": "node src/tasks/task001.js",
     "start:task02": "node src/tasks/task002.js",
+    "start:task03": "node src/tasks/task003.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "immutable": "^4.0.0-rc.12"
+  }
 }
